# nis2scan

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  pyproject.toml
.claude/agents/: legal-reviewer.md
.github/workflows/: aws-misconfigurations.yml  ci.yml  integration-tests-aws.yml  integration-tests-azure.yml  integration-tests-gcp.yml  oidc-smoke.yml  release.yml
config/: default.yaml
docs/: CONTEXT-planning.md  adr-audit-2026-07-05.md  arbeitsweise.md  aws-zugang.md  azure-zugang.md  dod-0.1-status.md  gcp-zugang.md  getting-started.md  permissions.md  rechtsgrundlagen-review.md  schema-changelog.md
docs/adr/: 0001-engine-als-library.md  0002-scanresult-json-als-vertrag.md  0003-scanner-strikt-read-only.md  0004-sprachtrennung-code-output.md  0005-open-core-apache-2.md  0006-finding-als-bewertete-feststellung.md  0007-check-outcome-zustandsmodell.md  0008-erfuellungsgrad-statt-score.md  0009-abdeckungsmodell-teilaspekt.md  0010-finding-fingerprint.md  0011-pseudonymisierung-als-export-konzept.md  0012-keine-betroffenheitspruefung.md  0013-rechtsstand-versionierung.md  0014-premium-in-separatem-repo.md  0015-rechts-mapping-bleibt-frei.md  0016-fail-safe-ergebnispolitik.md  0017-mvp-release-schnitt.md  0018-rechtsgrundlagen-review.md  0019-premium-distribution-versionskopplung.md  0020-definition-of-done-0-1.md  0021-schema-evolutionspolitik.md  0022-gcp-experimenteller-provider.md  0023-konsolidierte-feature-matrix.md  0024-m365-provider.md  0025-meldehilfe-p32.md  0026-findings-exceptions.md  README.md
docs/review/: w4-batch-nr1-dossier.md  w4-batch-nr10-dossier.md  w4-batch-nr2-dossier.md  w4-batch-nr3-dossier.md  w4-batch-nr4-dossier.md  w4-batch-nr5-dossier.md  w4-batch-nr6-dossier.md  w4-batch-nr7-dossier.md  w4-batch-nr8-dossier.md  w4-batch-nr9-dossier.md
infra/aws/: main.tf  outputs.tf  providers.tf  variables.tf
infra/azure/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/gcp/: main.tf  providers.tf  variables.tf
nis2scan/: __init__.py  __main__.py  plugins.py
nis2scan/cli/: __init__.py  cli.py
nis2scan/engine/: __init__.py  events.py  evidence.py  finding_exceptions.py  registry.py  scanner.py  secret.py
nis2scan/reporting/: __init__.py  context.py  json_export.py  labels.py  markdown.py  pseudonymize.py
nis2scan/utils/: logger.py  severity.py
tests/: test_plugins.py
tests/integration/: conftest.py  test_integration_az_nr1.py  test_integration_az_nr10.py  test_integration_az_nr2.py  test_integration_az_nr3.py  test_integration_az_nr4.py  test_integration_az_nr5.py  test_integration_az_nr6.py  test_integration_az_nr7.py  test_integration_az_nr8.py  test_integration_az_nr9.py  test_integration_exceptions.py  test_integration_gcp_nr1.py  test_integration_gcp_nr10.py  test_integration_gcp_nr2.py  test_integration_gcp_nr3.py  test_integration_gcp_nr4.py  test_integration_gcp_nr5.py  test_integration_gcp_nr6.py  test_integration_gcp_nr7.py  test_integration_gcp_nr8.py  test_integration_gcp_nr9.py  test_integration_nr1.py  test_integration_nr10.py  test_integration_nr10_phase4.py  test_integration_nr10_phase6.py  test_integration_nr1_phase4.py  test_integration_nr1_phase5.py  test_integration_nr2.py  test_integration_nr2_phase5.py  test_integration_nr2_phase6.py  test_integration_nr3.py  test_integration_nr3_phase4.py  test_integration_nr3_phase5.py  test_integration_nr3_phase6.py  test_integration_nr4.py  test_integration_nr4_phase6.py  test_integration_nr5.py  test_integration_nr5_phase4.py  test_integration_nr5_phase5.py  (+7 more)
tests/test_checks_aws/: test_nr10_mfa_kommunikation.py  test_nr1_risikoanalyse.py  test_nr2_vorfallsbewaltigung.py  test_nr3_bcm.py  test_nr4_lieferkette.py  test_nr5_schwachstellen.py  test_nr6_wirksamkeit.py  test_nr7_cyberhygiene.py  test_nr8_kryptographie.py  test_nr9_zugriffskontrolle.py
tests/test_checks_azure/: conftest.py  test_graph.py  test_nr10_mfa_kommunikation.py  test_nr1_risikoanalyse.py  test_nr2_vorfallsbewaltigung.py  (+7 more)
(+137 files in other folders)
