[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nis2scan"
version = "0.1.3"
description = "Open-source NIS2 compliance scanner for AWS, Azure & GCP cloud environments. Maps findings to §30 BSIG and ISO 27001:2022."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "VVulpe" },
]
keywords = ["nis2", "compliance", "cloud-security", "aws", "azure", "gcp", "bsig", "isms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.35.0",
    "azure-identity>=1.17.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-resource-subscriptions>=1.0.0b1",
    "azure-mgmt-resource-policy>=1.0.0b2",
    "azure-mgmt-storage>=21.0.0",
    "azure-mgmt-compute>=31.0.0",
    "azure-mgmt-network>=26.0.0",
    "azure-mgmt-keyvault>=10.3.0",
    "azure-mgmt-sql>=3.0.1",
    "azure-mgmt-web>=7.2.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-mgmt-security>=6.0.0",
    "azure-mgmt-recoveryservices>=3.0.0",
    "azure-mgmt-recoveryservicesbackup>=9.0.0",
    "azure-mgmt-containerregistry>=10.0.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-policyinsights>=1.0.0",
    "azure-mgmt-loganalytics>=13.0.0",
    "azure-mgmt-managementgroups>=2.0.0",
    "msgraph-sdk>=1.0.0",
    "google-auth>=2.29.0",
    "google-cloud-resource-manager>=1.12.0",
    "google-cloud-compute>=1.18.0",
    "google-cloud-storage>=2.16.0",
    "google-cloud-kms>=2.21.0",
    "google-cloud-logging>=3.10.0",
    "google-cloud-monitoring>=2.21.0",
    "google-cloud-securitycenter>=1.28.0",
    "google-cloud-container>=2.44.0",
    "google-cloud-asset>=3.26.0",
    "google-cloud-dns>=0.35.0",
    "google-api-python-client>=2.125.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "structlog>=24.1.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "moto[all]>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "boto3-stubs[essential]>=1.35.0",
]

[project.scripts]
nis2scan = "nis2scan.cli.cli:app"

[project.urls]
Homepage = "https://github.com/VVulpe/nis2scan"
Repository = "https://github.com/VVulpe/nis2scan"
Issues = "https://github.com/VVulpe/nis2scan/issues"
Documentation = "https://github.com/VVulpe/nis2scan/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["nis2scan"]

[tool.hatch.build.targets.sdist]
# Distribution contains only the package and licensing/readme files —
# never docs, infra, tests, or local tooling directories.
include = [
    "/nis2scan",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"nis2scan/cli/cli.py" = ["B008", "A002"]  # B008: typer.Option() in defaults is the standard pattern; A002: --format CLI flag

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring real AWS infrastructure (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "google.*",
    "googleapiclient.*",
    "google_cloud_asset.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["nis2scan"]
omit = ["tests/*"]
